--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "algorithm": "c",
         "stdlib.h": "c",
         "pthread.h": "c",
-        "insert_node_threads.h": "c"
+        "insert_node_threads.h": "c",
+        "tree_info_calc.h": "c",
+        "eucdist.h": "c"
     }
 }
