--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
         "median.h": "c",
         "knn_search.h": "c",
         "insert_node.h": "c",
-        "inner_outer_threads.h": "c"
+        "inner_outer_threads.h": "c",
+        "stdio.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
